# scalable-django-rest

./: .parameters.template.json  .pre-commit-config.yaml  .secrets.template.json  README.md  app.py  cdk.context.json
scalable_django_rest/: backend_workers_stack.py  database_stack.py  deployment_stage.py  django_api_stack.py  dns_route_to_alb_stack.py  external_secrets_stack.py  network_stack.py  pipeline_stack.py  queues_stack.py  scalable_django_rest_stack.py  static_files_stack.py
scripts/: add_black_on_git_pre_commit_hook.sh  run_cmd.py  set_parameters.py
src/: .dockerignore  README.md  pyproject.toml
src/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/config/settings/: base.py  prod.py  stage.py
src/docker/: .env.template  docker-compose.yml
src/docker/api/: Dockerfile  start-celery-worker.sh  start-prod-server.sh
src/users/: models.py
src/users/migrations/: 0001_initial.py
src/users/tests/: conftest.py  test_auth_api.py  test_user_model.py  test_users_api.py
tests/unit/: test_scalable_django_rest_stack.py
