[tool.poetry]
name = "scalable-django-rest"
version = "0.1.0"
description = ""
authors = ["marianobrc <marianomartinez84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
django-silk = "^5.0.1"
django-storages = "^1.13.1"
djangorestframework = "^3.13.1"
Markdown = "^3.4.1"
django-filter = "^22.1"
pycurl = "*"
boto3 = "*"
celery = { extras = ["sqs"], version = "~5.2" }
kombu = { extras = ["sqs"], version = "^5.2" }
psycopg2 = "^2.9.3"
djangorestframework-simplejwt = "^5.2.0"
dj-rest-auth = {extras = ["with_social"], version = "^2.2.5"}
django-model-utils = "^4.2.0"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pre-commit = "^2.20.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
